fix: large screen link alignment

--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -33,7 +33,7 @@ a {
 
 ul a {
   color: white;
-  font-size: 1rem;
+  font-size: 1.25rem;
   text-transform: capitalize;
   letter-spacing: 0.1rem;
   display: block;
@@ -52,9 +52,10 @@ ul a:hover {
   height: 0rem;
   overflow: hidden;
   transition: all 0.3s linear;
-  min-width: 25%;
+  min-width: 50%;
   float: right;
   background-color: black;
+  border-radius: 0 0 0 5px;
 }
 
 .show_links {
@@ -84,8 +85,7 @@ ul a:hover {
     display: none;
   }
   .links_container {
-    width: inherit;
-    float: none;
+    min-width: max-content;
     display: flex;
     height: auto !important;
     padding: 0;
@@ -96,6 +96,7 @@ ul a:hover {
   ul a {
     padding: 0;
     margin: 0 0.5rem;
+    font-size: 1rem;
   }
   ul a:hover {
     padding: 0;
